# OToggl

./: .envrc  .gitignore  .ocamlformat  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dev.opam  dune-project  esy.json  otoggl.opam  package.json
.github/workflows/: ci.yml  tagged.yaml
esy.lock/: index.json
example/: dune  simple.ml
lib/: Authenticated.ml  Toggl.ml  api.ml  auth.ml  dune  toggl.atd  types.ml  util.ml
script/: release.sh
test/: dune  test_toggl.ml  test_toggl_int.ml  testables.ml  togglClient.ml  togglClient.mli  togglErrorClient.ml
test/support/: test_runner.ml
